--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,13 +76,32 @@ services:
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
     networks:
       - microservices-net
-
   mail-dev:
     container_name: ms_mail_dev
     image: maildev/maildev
     ports:
       - 1080:1080
       - 1025:1025
+  zipkin:
+    container_name: zipkin
+    image: openzipkin/zipkin
+    ports:
+      - 9411:9411
+    networks:
+      - microservices-net
+#  keycloak:
+#    container_name: ms_keycloak
+#    image: quay.io/keycloak/keycloak:latest
+#    environment:
+#      KEYCLOAK_ADMIN: admin
+#      KEYCLOAK_ADMIN_PASSWORD: admin
+#    command:
+#      - start-dev
+#    ports:
+#      - 9098:8080
+#    networks:
+#      - microservices-net
+
 networks:
   microservices-net:
     driver: bridge
